@@ -24,6 +24,7 @@
 	   getopt on non-linux requires optind to be saved/restored.
 	- fix: don't remove file until last occurence in transaction (#4291).
 	- resuscitate net shared paths (#4330).
+	- fix: macro table cannot contain NULL pointers (#4263).
 
 3.0.1 -> 3.0.2
 	- eliminate armv4 entries from rpmrc (Andrew E. Mileski).
